# spotify-diploma

./: .env.bstack  .env.bstack_credentials.example  .env.local_emulator  .env.selenoid_credentials.example  .env.spotify_credentials.example  .gitignore  README.md  config.py  pyproject.toml
data/: tracks_artists.py  user.py
json_schemas/: user_info.json
models/mobile/: library_tab.py  search_tab.py  start_page.py
models/web/: login_page.py  main_page.py
tests/api/: conftest.py  test_current_user.py
tests/mobile/: config.py  conftest.py  test_android.py
tests/web/: conftest.py  test_login.py  test_playlist.py  test_search.py
utils/: attach.py  helper.py
